# Cougr

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  murdoku.yml
.github/workflows/: circom.yml  circuit_examples.yml  core.yml  publish-crate.yml
.stellar/: manifest.json
docs/adr/: 0006-game-circuit-suite.md  0007-workspace-subcrates.md
examples/: README.md
examples/ai_dungeon_master_arena/: Cargo.toml
examples/angry_birds/: Cargo.toml
examples/arkanoid/: Cargo.toml
examples/asteroids/: Cargo.toml
examples/battleship/: Cargo.toml  README.md
examples/blind_auction/: Cargo.toml
examples/blind_auction/src/: lib.rs  tests.rs
examples/bomberman/: Cargo.toml
examples/checkers/: Cargo.toml
examples/chess/: Cargo.toml
examples/connect_four/: Cargo.toml
examples/cross_asset_racing_league/: Cargo.toml
examples/dice_duel/: Cargo.toml
examples/dice_duel/src/: lib.rs  tests.rs
examples/flappy_bird/: Cargo.toml
examples/fog_explorer/: Cargo.toml
examples/fog_explorer/src/: lib.rs  tests.rs
examples/geometry_dash/: Cargo.toml
examples/guild_arena/: Cargo.toml
examples/guild_treasury_wars/: Cargo.toml
examples/hidden_hand/: Cargo.toml
examples/hidden_hand/src/: lib.rs  tests.rs
examples/memory_match/: Cargo.toml
examples/minesweeper/: Cargo.toml
examples/murdoku/: Cargo.toml
examples/pac_man/: Cargo.toml
examples/pokemon_mini/: Cargo.toml
examples/pong/: Cargo.toml
examples/proof_of_hunt/: Cargo.toml  README.md
examples/reversi/: Cargo.toml
examples/rock_paper_scissors/: Cargo.toml  README.md
examples/session_arena/: Cargo.toml
examples/session_arena/src/: lib.rs  tests.rs
examples/shadow_draft_card_game/: Cargo.toml
examples/snake/: Cargo.toml
examples/space_invaders/: Cargo.toml  README.md
examples/spawn_and_move/: Cargo.toml  README.md
examples/sudoku/: Cargo.toml
examples/tap_battle/: Cargo.toml
examples/tetris/: Cargo.toml  README.md
examples/tic_tac_toe/: Cargo.toml
examples/tower_defense/: Cargo.toml
examples/trading_card_game/: Cargo.toml
examples/treasure_hunt/: Cargo.toml  README.md
internal/cougr-core-circuits/: .gitignore  AUDIT.md  Cargo.toml  README.md  package.json
internal/cougr-core-circuits/circom/: fair_dice.circom  fog_of_war.circom  hidden_cards.circom  sealed_bid.circom
internal/cougr-core-circuits/circom/lib/: deck.circom  fog.circom  modulo.circom
internal/cougr-core-circuits/fixtures/: fair_dice.input.json  fog_of_war.input.json  hidden_cards.input.json  sealed_bid.input.json
internal/cougr-core-circuits/scripts/: compile.sh  download-ptau.sh  export-soroban-artifacts.mjs  export-vk.sh  generate-fixtures.mjs  lib.sh  prove.sh  run-pipeline.sh  setup.sh  validate-layouts.sh  verify-rejects-invalid.sh
internal/cougr-core-circuits/src/: lib.rs
internal/cougr-core-session/: Cargo.toml
internal/cougr-core-test/: Cargo.toml
internal/cougr-core-test/src/: lib.rs
src/: ecs_events.rs  game.rs  lib.rs  macros.rs  observers.rs  rich_component.rs
src/accounts/: contract.rs  session_builder.rs  storage.rs  traits.rs
src/circuits/: embedded.rs  fair_dice.rs  fog_of_war.rs  generated.rs  generated_fixtures.rs  hidden_cards.rs  mod.rs  sealed_bid.rs  spec.rs
src/session/: component.rs  manager.rs  mod.rs  status.rs
src/simple_world/: mod.rs
src/test/: fixture.rs  harness.rs  mock_session.rs  mod.rs  replay.rs  scenario.rs  snapshot.rs
src/zk/: advanced.rs  batch.rs  bls12_381.rs  crypto.rs  experimental.rs  groth16.rs  interop.rs  mod.rs  traits.rs
tests/: integration_circuits.rs  integration_ecs_events.rs  integration_rich_components.rs  integration_sandbox.rs  integration_session.rs  integration_zk.rs  public_api_surface.rs
(+49 files in other folders)
