[package]
name = "dice_duel"
version = "0.1.0"
edition = "2021"
publish = false
description = "Canonical Cougr ZK example: fair dice via cougr_core::circuits::fair_dice"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1.0"
cougr-core = { path = "../../" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
cougr-core = { path = "../../", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true

[workspace]