[package]
name = "fog_explorer"
version = "0.1.0"
edition = "2021"
publish = false
description = "Canonical Cougr ZK example: fog of war via cougr_core::circuits::fog_of_war"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1.0"
cougr-core = { path = "../../" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
cougr-core = { path = "../../", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true

[workspace]