[package]
name = "cougr-core-circuits"
version = "1.1.0"
edition = "2021"
publish = false
description = "Internal ZK game circuit builders — compiled into cougr-core via include"
license = "MIT"
rust-version = "1.70.0"

[lib]
path = "src/lib.rs"

[dependencies]
soroban-sdk = "25.1.0"

[features]
default = []
hazmat-crypto = ["soroban-sdk/hazmat-crypto"]