[package]
name = "cougr-core-test"
version = "1.1.0"
edition = "2021"
publish = false
description = "Internal on-chain game testing sandbox — compiled into cougr-core via include"
license = "MIT"
rust-version = "1.70.0"

[lib]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[features]
default = []
debug = []